Main and Login activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">MarketplaceLayout</string>
+    <string-array name="Country">
+        <item>Indonesia</item>
+        <item>Japan</item>
+        <item>India</item>
+        <item>Jerman</item>
+        <item>Arab</item>
+    </string-array>
 </resources>
