fix profil and register activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">MarketplaceLayout</string>
     <string-array name="Country">
+        <item>Country</item>
         <item>Indonesia</item>
         <item>Japan</item>
         <item>India</item>
